fixed horizontal scroll on chat body

--- a/style/style.css
+++ b/style/style.css
@@ -16,7 +16,8 @@ html,body{
     height: 436px;
     overflow-y: scroll;
     background-color: #f5f5f5;
-    
+    display: block;
+    overflow-x: hidden;
 }
 
 .chat-welcome-message {
